--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
                         <p class="text-lg text-gray-400 mb-6 leading-relaxed">
                             I am a detail-oriented and creative full-stack developer with over 5 years of experience in building high-performing, user-friendly, and responsive web applications. My expertise spans across modern technologies like React, Node.js, and Python, allowing me to craft seamless solutions from front-end design to back-end logic. I'm passionate about solving complex problems and creating intuitive digital experiences.
                         </p>
-                        <a href="./Doc/grayhateth.pdf" class="inline-block py-2 px-6 rounded-md text-white bg-gray-800 hover:bg-gray-700 transition-colors duration-300 download-btn">
+                        <a href="https://github.com/Grayhateth/Portfolio/tree/main/Doc/GRAYHATETH.pdf" class="inline-block py-2 px-6 rounded-md text-white bg-gray-800 hover:bg-gray-700 transition-colors duration-300 download-btn">
                             <span>Download Resume <i class="fas fa-download ml-2"></i></span>
                         </a>
                     </div>
