--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
                 <p class="text-center text-gray-400 mb-8 max-w-2xl mx-auto">
                     I'm currently available for new projects. Whether you have a question, a job or just want to say hi, feel free to reach out.
                 </p>
-                <form id="contact-form" action="https://formspree.io/f/{{mzzakvdk}}" method="POST" class="max-w-xl mx-auto bg-[#161b22] p-8 rounded-xl shadow-md">
+                <form id="contact-form" action="https://formspree.io/f/mzzakvdk" method="POST" class="max-w-xl mx-auto bg-[#161b22] p-8 rounded-xl shadow-md">
                     <div class="mb-6">
                         <label for="name" class="block text-gray-400 text-sm font-medium mb-2">Your Name</label>
                         <input type="text" id="name" name="name" required class="w-full px-4 py-3 rounded-md bg-gray-800 text-white placeholder-gray-500 focus:outline-none focus:ring-2 focus:ring-cyan-500">
