--- a/css/img/demo/screens/01.html
+++ b/css/img/demo/screens/01.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html style="height:100%">
+<head>
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 <title> 404 Not Found
 </title><style>@media (prefers-color-scheme:dark){body{background-color:#000!important}}</style></head>
