--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta charset="UTF-8">
 
     <!-- Page Title -->
-    <title>Grayhateth - Digital Agency & Personal Portfolio HTML Template</title>
+    <title>Grayhateth - Digital Agency & Personal Portfolio </title>
 
     <!-- Meta Tags -->
     <meta name="description" content="Elevate your digital presence with Rayo - dynamic and stylish HTML template designed for creative agencies and personal brands. With modern layouts, smooth interactions and a polished aesthetic, Rayo template helps showcase projects, services and expertise with clarity and impact.">
@@ -223,7 +223,7 @@
             <div class="mxd-menu__right">
               <div class="menu-promo">
                 <div class="menu-promo__content">
-                  <p class="menu-promo__caption menu-fade-in">👋 New Rayo template is here!<br>Showcase your projects, services and expertise with impact.</p>
+                  <p class="menu-promo__caption menu-fade-in">👋 New Gray template is here!<br>Showcase your projects, services and expertise with impact.</p>
                   <div class="menu-promo__video">
                     <video class="menu-video" id="inner-video" preload="auto" autoplay="autoplay" loop="loop" muted="muted" poster="video/540x310_video-01.webp">
                       <source type="video/mp4" src="video/540x310_video-01.mp4">
@@ -240,7 +240,7 @@
                 Made with
                 <i class="ph-fill ph-heart t-additional"></i>
                 by
-                <a class="no-effect" href="https://1.envato.market/EKA9WD" target="_blank">Mix_Design</a>
+                <a class="no-effect" href="https://www.grayhateth.vercel.app" target="_blank">Grayhateth</a>
               </p>
               <p class="t-xsmall">
                 <i class="ph ph-copyright"></i>
@@ -259,7 +259,7 @@
     <header id="header" class="mxd-header">
       <!-- header logo -->
       <div class="mxd-header__logo loading__fade">
-        <a href="index-main.html" class="mxd-logo">
+        <a href="index.html" class="mxd-logo">
           <!-- logo icon -->
           <svg class="mxd-logo__image" version="1.1" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" viewBox="0 0 56 56" style="enable-background:new 0 0 56 56;" xml:space="preserve">
             <style type="text/css">
@@ -296,13 +296,13 @@
             </g>
           </svg>
           <!-- logo text -->
-          <span class="mxd-logo__text">rayo<br>template</span>
+          <span class="mxd-logo__text">Gray<br>template</span>
         </a>
       </div>
       <!-- header controls -->
       <div class="mxd-header__controls loading__fade">
         <button id="color-switcher" class="mxd-color-switcher" type="button" role="switch" aria-label="light/dark mode" aria-checked="true"></button>
-        <a class="btn btn-anim btn-default btn-mobile-icon btn-outline slide-right" href="https://1.envato.market/kOvmWN" target="_blank">
+        <a class="btn btn-anim btn-default btn-mobile-icon btn-outline slide-right" href="https:grayhateth.vercel.app/pricing" target="_blank">
           <span class="btn-caption">Purchase</span>
           <i class="ph-bold ph-shopping-cart-simple"></i>
         </a>
