--- a/pricing.html
+++ b/pricing.html
@@ -223,7 +223,7 @@
             <div class="mxd-menu__right">
               <div class="menu-promo">
                 <div class="menu-promo__content">
-                  <p class="menu-promo__caption menu-fade-in">👋 Nice to see you!<br>I'm Grayhateth,Fullstack Developer, digital 
+                  <p class="menu-promo__caption menu-fade-in">👋 Nice to see you!<br>I'm Gray,Fullstack Developer, digital 
                     designer and illustrator </p>
                   <div class="menu-promo__video">
                     <video class="menu-video" id="inner-video" preload="auto" autoplay="autoplay" loop="loop" muted="muted" poster="video/540x310_video-01.webp">
@@ -241,7 +241,7 @@
                 Made with
                 <i class="ph-fill ph-heart t-additional"></i>
                 by
-                <a class="no-effect" href="https://Grayhateth.com" target="_blank">Grayhateth</a>
+                <a class="no-effect" href="https://Grayhateth.vercel.app" target="_blank">Grayhateth</a>
               </p>
               <p class="t-xsmall">
                 <i class="ph ph-copyright"></i>
@@ -260,7 +260,7 @@
     <header id="header" class="mxd-header">
       <!-- header logo -->
       <div class="mxd-header__logo loading__fade">
-        <a href="index-main.html" class="mxd-logo">
+        <a href="index.html" class="mxd-logo">
           <!-- logo icon -->
           <svg class="mxd-logo__image" version="1.1" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" viewBox="0 0 56 56" style="enable-background:new 0 0 56 56;" xml:space="preserve">
             <style type="text/css">
