--- a/index-software-development-company.html
+++ b/index-software-development-company.html
@@ -2,13 +2,12 @@
 <html lang="en" dir="ltr">
 
   
-<!-- Mirrored from mixdesign.dev/themeforest/rayo/index-software-development-company.html by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 08:33:43 GMT -->
-<!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=utf-8" /><!-- /Added by HTTrack -->
+
 <head>
     <meta charset="UTF-8">
 
     <!-- Page Title -->
-    <title>Rayo - Digital Agency & Personal Portfolio HTML Template</title>
+    <title>Grayhateth - Digital Agency & Personal Portfolio HTML Template</title>
 
     <!-- Meta Tags -->
     <meta name="description" content="Elevate your digital presence with Rayo - dynamic and stylish HTML template designed for creative agencies and personal brands. With modern layouts, smooth interactions and a polished aesthetic, Rayo template helps showcase projects, services and expertise with clarity and impact.">
@@ -297,14 +296,14 @@
             </g>
           </svg>
           <!-- logo text -->
-          <span class="mxd-logo__text">rayo<br>template</span>
+          <span class="mxd-logo__text">Grayhateth</span>
         </a>
       </div>
       <!-- header controls -->
       <div class="mxd-header__controls loading__fade">
         <button id="color-switcher" class="mxd-color-switcher" type="button" role="switch" aria-label="light/dark mode" aria-checked="true"></button>
         <a class="btn btn-anim btn-default btn-mobile-icon btn-outline slide-right-up" href="contact.html">
-          <span class="btn-caption">Say Hello</span>
+          <span class="btn-caption">Reach out</span>
           <i class="ph-bold ph-arrow-up-right"></i>
         </a>
       </div>
@@ -1655,7 +1654,7 @@
                   c0,0,0-3.1,0-4.1c0-0.4,0.2-1.7,0.2-1.7c0.1-0.6,0.2-1.1,0.6-1.6c0.3-0.4,0.7-0.8,1.1-1.1c0.5-0.3,1-0.5,1.6-0.6
                   c0,0,1.3-0.1,1.8-0.2c1,0,4,0,4,0c0.2,0,0.4-0.2,0.4-0.4C20,9.8,19.8,9.6,19.6,9.6L19.6,9.6z"></path>
               </svg>
-              <a href="mailto:example@example.com?subject=Message%20from%20your%20site">hello@rayostudio.com</a>
+              <a href="mailto:example@example.com?subject=Message%20from%20your%20site">hello@grayhateth.com</a>
             </p>
           </div>
           <!-- inner card -->
@@ -1760,5 +1759,4 @@
   </body>
 
 
-<!-- Mirrored from mixdesign.dev/themeforest/rayo/index-software-development-company.html by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 08:34:36 GMT -->
 </html>
