--- a/about-me.html
+++ b/about-me.html
@@ -8,7 +8,7 @@
     <meta charset="UTF-8">
 
     <!-- Page Title -->
-    <title>Rayo - Digital Agency & Personal Portfolio HTML Template</title>
+    <title>About me</title>
 
     <!-- Meta Tags -->
     <meta name="description" content="Elevate your digital presence with Rayo - dynamic and stylish HTML template designed for creative agencies and personal brands. With modern layouts, smooth interactions and a polished aesthetic, Rayo template helps showcase projects, services and expertise with clarity and impact.">
@@ -31,7 +31,7 @@
     <meta property="og:image:width" content="1200">
     <meta property="og:title" content="Rayo - Digital Agency & Personal Portfolio HTML Template">
     <meta property="og:description" content="Elevate your digital presence with Rayo - dynamic and stylish HTML template designed for creative agencies and personal brands. With modern layouts, smooth interactions and a polished aesthetic, Rayo template helps showcase projects, services and expertise with clarity and impact.">
-    <meta property="og:url" content="https://mixdesign.dev/themeforest/rayo">
+    <meta property="og:url" content="https://mixdesign.dev/themeforest/Gray">
     <meta property="og:image" content="img/og-image.html">
     <!-- Facebook Metadata End -->
 
@@ -223,8 +223,8 @@
             <div class="mxd-menu__right">
               <div class="menu-promo">
                 <div class="menu-promo__content">
-                  <p class="menu-promo__caption menu-fade-in">👋 Nice to see you!<br>I'm Alex Walker, digital 
-                    designer and illustrator based in Odesa, Ukraine</p>
+                  <p class="menu-promo__caption menu-fade-in">👋 Nice to have you here!<br>I'm Gray, a fullstack, cybersecurity expert, digital 
+                    designer and illustrator </p>
                   <div class="menu-promo__video">
                     <video class="menu-video" id="inner-video" preload="auto" autoplay="autoplay" loop="loop" muted="muted" poster="video/540x310_video-01.webp">
                       <source type="video/mp4" src="video/540x310_video-01.mp4">
@@ -241,7 +241,7 @@
                 Made with
                 <i class="ph-fill ph-heart t-additional"></i>
                 by
-                <a class="no-effect" href="https://1.envato.market/EKA9WD" target="_blank">Mix_Design</a>
+                <a class="no-effect" href="https:grayhateth.vercel.app" target="_blank">Grayhateth</a>
               </p>
               <p class="t-xsmall">
                 <i class="ph ph-copyright"></i>
@@ -297,7 +297,7 @@
             </g>
           </svg>
           <!-- logo text -->
-          <span class="mxd-logo__text">rayo<br>template</span>
+          <span class="mxd-logo__text">Grayhateth</span>
         </a>
       </div>
       <!-- header controls -->
@@ -1499,7 +1499,7 @@
                   c0,0,0-3.1,0-4.1c0-0.4,0.2-1.7,0.2-1.7c0.1-0.6,0.2-1.1,0.6-1.6c0.3-0.4,0.7-0.8,1.1-1.1c0.5-0.3,1-0.5,1.6-0.6
                   c0,0,1.3-0.1,1.8-0.2c1,0,4,0,4,0c0.2,0,0.4-0.2,0.4-0.4C20,9.8,19.8,9.6,19.6,9.6L19.6,9.6z"></path>
               </svg>
-              <a href="mailto:example@example.com?subject=Message%20from%20your%20site">hello@rayostudio.com</a>
+              <a href="mailto:example@example.com?subject=Message%20from%20your%20site">hello@Grayhateth.com</a>
             </p>
           </div>
           <!-- inner card -->
