--- a/about-me.html
+++ b/about-me.html
@@ -2,8 +2,6 @@
 <html lang="en" dir="ltr">
 
   
-<!-- Mirrored from mixdesign.dev/themeforest/rayo/about-me.html by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 08:36:29 GMT -->
-<!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=utf-8" /><!-- /Added by HTTrack -->
 <head>
     <meta charset="UTF-8">
 
@@ -260,7 +258,7 @@
     <header id="header" class="mxd-header">
       <!-- header logo -->
       <div class="mxd-header__logo loading__fade">
-        <a href="index-main.html" class="mxd-logo">
+        <a href="index.html" class="mxd-logo">
           <!-- logo icon -->
           <svg class="mxd-logo__image" version="1.1" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" viewBox="0 0 56 56" style="enable-background:new 0 0 56 56;" xml:space="preserve">
             <style type="text/css">
@@ -304,7 +302,7 @@
       <div class="mxd-header__controls loading__fade">
         <button id="color-switcher" class="mxd-color-switcher" type="button" role="switch" aria-label="light/dark mode" aria-checked="true"></button>
         <a class="btn btn-anim btn-default btn-mobile-icon btn-outline slide-right-up" href="contact.html">
-          <span class="btn-caption">Say Hello</span>
+          <span class="btn-caption">Reach Out</span>
           <i class="ph-bold ph-arrow-up-right"></i>
         </a>
       </div>
@@ -349,14 +347,16 @@
                     <div class="mxd-block__inner-headline">
                       <h1 class="inner-headline__title animated-type loading__item">
                         <span id="typed-strings">
+                          <b>Fullstack</b>
                           <b>UI designer</b>
+                          <b>Cybersecurity Pro</b>
                           <b>3D Artist</b>
                           <b>Illustrator</b>
                         </span>
                         <span id="typed"></span>
                       </h1>
-                      <p class="inner-headline__text t-large t-bright loading__item">👋 Hey! I am Alex Walker. I'm 
-                        passionate about crafting designs that tell stories, spark emotions, and make an 
+                      <p class="inner-headline__text t-large t-bright loading__item">👋 Hey! I am Grayhat. A fullstack developer, I'm passionate about crafting designs that tell stories, spark emotions, I build high-performance websites and applications using 
+                        modern technologies. My solutions are designed to be scalable and functional for optimal performance.and make an 
                         impact. Whether I'm crafting digital experiences or creating illustrations, 
                         I pour creativity and precision into every detail.</p>
                     </div>
@@ -391,7 +391,7 @@
                   <use xlink:href="#textPath" fill="none"></use>
                   <text>
                     <!-- button text here!!! -->
-                    <textPath xlink:href="#textPath">Download CV * Download CV * Download CV * </textPath>
+                    <textPath xlink:href="/grayhateth.pdf">Download CV * Download CV * Download CV * </textPath>
                   </text>
                 </g>
               </svg>
@@ -955,7 +955,7 @@
                                 <h4 class="anim-uni-in-up">Drawing Concentration</h4>
                                 <p class="mxd-res-list__source anim-uni-in-up">
                                   course by
-                                  <a href="#0" target="_blank">New York Academy of Art</a>
+                                  <a href="#0" target="_blank">Datanet Academy of Art</a>
                                 </p>
                               </div>
                               <div class="mxd-res-list__descr">
@@ -978,7 +978,7 @@
                                 <h4 class="anim-uni-in-up">UI/UX Design Specialization</h4>
                                 <p class="mxd-res-list__source anim-uni-in-up">
                                   course by
-                                  <a href="#0" target="_blank">California Institute of Arts</a>
+                                  <a href="#0" target="_blank">Datanet Institute of Arts</a>
                                 </p>
                               </div>
                               <div class="mxd-res-list__descr">
@@ -1144,7 +1144,7 @@
                               </div>
                             </div>
                             <div class="mxd-testimonials-image__text" data-swiper-parallax-x="-100" data-swiper-parallax-opacity="0">
-                              <p class="t-large">Working with Alex was an absolute pleasure! He took the time to understand our business 
+                              <p class="t-large">Working with Gray was an absolute pleasure! He took the time to understand our business 
                                 needs and translated them into a beautifully designed, user-friendly website.</p>
                               <a class="btn btn-anim btn-default btn-small btn-opposite slide-right-up" href="#0">
                                 <span class="btn-caption">Project Page</span>
@@ -1184,7 +1184,7 @@
                               </div>
                             </div>
                             <div class="mxd-testimonials-image__text" data-swiper-parallax-x="-100" data-swiper-parallax-opacity="0">
-                              <p class="t-large">Amazing job on our website! Alex understood exactly 
+                              <p class="t-large">Amazing job on our website! Gray understood exactly 
                                 what we needed and made it look great and easy to use.</p>
                               <a class="btn btn-anim btn-default btn-small btn-opposite slide-right-up" href="#0">
                                 <span class="btn-caption">Project Page</span>
@@ -1514,14 +1514,14 @@
                   c0,0,0-3.1,0-4.1c0-0.4,0.2-1.7,0.2-1.7c0.1-0.6,0.2-1.1,0.6-1.6c0.3-0.4,0.7-0.8,1.1-1.1c0.5-0.3,1-0.5,1.6-0.6
                   c0,0,1.3-0.1,1.8-0.2c1,0,4,0,4,0c0.2,0,0.4-0.2,0.4-0.4C20,9.8,19.8,9.6,19.6,9.6L19.6,9.6z"></path>
               </svg>
-              <a href="tel:+12127089400">+1 212-708-9400</a>
+              <a href="tel:+12127089400">+1 808-708-9400</a>
             </p>
           </div>
           <!-- inner card -->
           <div class="footer-blocks__card fill-card notify">
             <!-- card title -->
             <div class="footer-blocks__title anim-uni-in-up">
-              <p class="footer-blocks__title-m">Subscribe to our insights:</p>
+              <p class="footer-blocks__title-m">Subscribe to insights:</p>
             </div>
             <!-- subscribe form container -->
             <div class="form-container">
@@ -1555,7 +1555,7 @@
               <!-- footer socials -->
               <div class="footer-blocks__socials">
                 <ul class="footer-socials">
-                  <li class="footer-socials__item anim-uni-in-up"><a href="https://dribbble.com/" class="footer-socials__link" target="_blank">Dribbble</a></li>
+                  <li class="footer-socials__item anim-uni-in-up"><a href="https://www.x.com/grayhateth" class="footer-socials__link" target="_blank">X</a></li>
                   <li class="footer-socials__item anim-uni-in-up"><a href="https://www.behance.net/" class="footer-socials__link" target="_blank">Behance</a></li>
                   <li class="footer-socials__item anim-uni-in-up"><a href="https://www.instagram.com/" class="footer-socials__link" target="_blank">Instagram</a></li>
                   <li class="footer-socials__item anim-uni-in-up"><a href="https://github.com/" class="footer-socials__link" target="_blank">Github</a></li>
@@ -1567,7 +1567,7 @@
             <!-- links -->
             <div class="footer-blocks__links">
               <p class="t-xsmall t-muted">
-                <a class="no-effect" href="https://1.envato.market/EKA9WD" target="_blank">Mix_Design</a>
+                <a class="no-effect" href="https://grayhateth.vercel.app" target="_blank">Grayhateth</a>
                 <i class="ph-bold ph-copyright"></i>
                 2025
               </p>
@@ -1604,5 +1604,4 @@
   </body>
 
 
-<!-- Mirrored from mixdesign.dev/themeforest/rayo/about-me.html by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 08:36:31 GMT -->
 </html>
