--- a/index-creative-developer.html
+++ b/index-creative-developer.html
@@ -2,16 +2,15 @@
 <html lang="en" dir="ltr">
 
   
-<!-- Mirrored from mixdesign.dev/themeforest/rayo/index-creative-developer.html by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 08:36:20 GMT -->
-<!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=utf-8" /><!-- /Added by HTTrack -->
+
 <head>
     <meta charset="UTF-8">
 
     <!-- Page Title -->
-    <title>Rayo - Digital Agency & Personal Portfolio HTML Template</title>
+    <title>Grayhateth - Digital Agency & Personal Portfolio HTML Template</title>
 
     <!-- Meta Tags -->
-    <meta name="description" content="Elevate your digital presence with Rayo - dynamic and stylish HTML template designed for creative agencies and personal brands. With modern layouts, smooth interactions and a polished aesthetic, Rayo template helps showcase projects, services and expertise with clarity and impact.">
+    <meta name="description" content="Elevate your digital presence with Gray - dynamic and stylish HTML template designed for creative agencies and personal brands. With modern layouts, smooth interactions and a polished aesthetic, Gray template helps showcase projects, services and expertise with clarity and impact.">
     <meta name="keywords" content="mix_design, resume, portfolio, personal page, cv, template, one page, responsive, html5, css3, creative, clean">
     <meta name="author" content="mix_design">
 
@@ -29,8 +28,8 @@
     <!-- Facebook Metadata Start -->
     <meta property="og:image:height" content="1200">
     <meta property="og:image:width" content="1200">
-    <meta property="og:title" content="Rayo - Digital Agency & Personal Portfolio HTML Template">
-    <meta property="og:description" content="Elevate your digital presence with Rayo - dynamic and stylish HTML template designed for creative agencies and personal brands. With modern layouts, smooth interactions and a polished aesthetic, Rayo template helps showcase projects, services and expertise with clarity and impact.">
+    <meta property="og:title" content="Gray - Digital Agency & Personal Portfolio HTML Template">
+    <meta property="og:description" content="Elevate your digital presence with Gray - dynamic and stylish HTML template designed for creative agencies and personal brands. With modern layouts, smooth interactions and a polished aesthetic, Gray template helps showcase projects, services and expertise with clarity and impact.">
     <meta property="og:url" content="https://mixdesign.dev/themeforest/rayo">
     <meta property="og:image" content="img/og-image.html">
     <!-- Facebook Metadata End -->
@@ -531,7 +530,7 @@
                     <div class="row gx-0">
                       <div class="col-12 col-xl-6 mxd-grid-item no-margin">
                         <div class="mxd-projects-list__title-v2 anim-uni-in-up">
-                          <p>Rayo Studio</p>
+                          <p>Gray Studio</p>
                         </div>
                         <div class="mxd-projects-list__image anim-uni-in-up">
                           <img src="img/works/preview/1200x800_prv-07.webp" alt="Project Preview">
@@ -1082,7 +1081,7 @@
                   c0,0,0-3.1,0-4.1c0-0.4,0.2-1.7,0.2-1.7c0.1-0.6,0.2-1.1,0.6-1.6c0.3-0.4,0.7-0.8,1.1-1.1c0.5-0.3,1-0.5,1.6-0.6
                   c0,0,1.3-0.1,1.8-0.2c1,0,4,0,4,0c0.2,0,0.4-0.2,0.4-0.4C20,9.8,19.8,9.6,19.6,9.6L19.6,9.6z"></path>
               </svg>
-              <a href="mailto:example@example.com?subject=Message%20from%20your%20site">hello@rayostudio.com</a>
+              <a href="mailto:example@example.com?subject=Message%20from%20your%20site">hello@grayhateth.com</a>
             </p>
           </div>
           <!-- inner card -->
@@ -1150,7 +1149,7 @@
             <!-- links -->
             <div class="footer-blocks__links anim-uni-in-up">
               <p class="t-xsmall t-muted">
-                <a class="no-effect" href="https://1.envato.market/EKA9WD" target="_blank">Mix_Design</a>
+                <a class="no-effect" href="https://1.envato.market/EKA9WD" target="_blank">Grayhateth</a>
                 <i class="ph-bold ph-copyright"></i>
                 2025
               </p>
@@ -1184,5 +1183,5 @@
   </body>
 
 
-<!-- Mirrored from mixdesign.dev/themeforest/rayo/index-creative-developer.html by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 08:36:21 GMT -->
+
 </html>
