--- a/about-me.html
+++ b/about-me.html
@@ -9,7 +9,7 @@
     <title>About me</title>
 
     <!-- Meta Tags -->
-    <meta name="description" content="Elevate your digital presence with Rayo - dynamic and stylish HTML template designed for creative agencies and personal brands. With modern layouts, smooth interactions and a polished aesthetic, Rayo template helps showcase projects, services and expertise with clarity and impact.">
+    <meta name="description" content="Elevate your digital presence with Gray - dynamic and stylish HTML template designed for creative agencies and personal brands. With modern layouts, smooth interactions and a polished aesthetic, Gray template helps showcase projects, services and expertise with clarity and impact.">
     <meta name="keywords" content="mix_design, resume, portfolio, personal page, cv, template, one page, responsive, html5, css3, creative, clean">
     <meta name="author" content="mix_design">
 
@@ -27,9 +27,9 @@
     <!-- Facebook Metadata Start -->
     <meta property="og:image:height" content="1200">
     <meta property="og:image:width" content="1200">
-    <meta property="og:title" content="Rayo - Digital Agency & Personal Portfolio HTML Template">
-    <meta property="og:description" content="Elevate your digital presence with Rayo - dynamic and stylish HTML template designed for creative agencies and personal brands. With modern layouts, smooth interactions and a polished aesthetic, Rayo template helps showcase projects, services and expertise with clarity and impact.">
-    <meta property="og:url" content="https://mixdesign.dev/themeforest/Gray">
+    <meta property="og:title" content="Gray - Digital Agency & Personal Portfolio HTML Template">
+    <meta property="og:description" content="Elevate your digital presence with Gray - dynamic and stylish HTML template designed for creative agencies and personal brands. With modern layouts, smooth interactions and a polished aesthetic, Gray template helps showcase projects, services and expertise with clarity and impact.">
+    <meta property="og:url" content="https://mixdesign.dev/themeforest/Rayo">
     <meta property="og:image" content="img/og-image.html">
     <!-- Facebook Metadata End -->
 
@@ -1556,8 +1556,8 @@
               <div class="footer-blocks__socials">
                 <ul class="footer-socials">
                   <li class="footer-socials__item anim-uni-in-up"><a href="https://www.x.com/grayhateth" class="footer-socials__link" target="_blank">X</a></li>
-                  <li class="footer-socials__item anim-uni-in-up"><a href="https://www.behance.net/" class="footer-socials__link" target="_blank">Behance</a></li>
-                  <li class="footer-socials__item anim-uni-in-up"><a href="https://www.instagram.com/" class="footer-socials__link" target="_blank">Instagram</a></li>
+                  <li class="footer-socials__item anim-uni-in-up"><a href="https://www.grayhateth.com/" class="footer-socials__link" target="_blank">Grayhateth</a></li>
+                  <li class="footer-socials__item anim-uni-in-up"><a href="https://www.instagram.com/grayhateth" class="footer-socials__link" target="_blank">Instagram</a></li>
                   <li class="footer-socials__item anim-uni-in-up"><a href="https://github.com/" class="footer-socials__link" target="_blank">Github</a></li>
                   <li class="footer-socials__item anim-uni-in-up"><a href="https://codepen.io/" class="footer-socials__link" target="_blank">Codepen</a></li>
                   <li class="footer-socials__item anim-uni-in-up"><a href="https://www.figma.com/community" class="footer-socials__link" target="_blank">Figma Community</a></li>
