--- a/index.html
+++ b/index.html
@@ -1701,6 +1701,8 @@
     <script src="js/libs.min.js"></script>
     <script src="js/app.min.js"></script>
     <!-- Load Scripts End -->
+   
+   <script src="js/fix.js"></script> 
     
   </body>
 
