--- a/works-masonry.html
+++ b/works-masonry.html
@@ -588,7 +588,7 @@
                               </div>
                             </div>
                             <div class="mxd-testimonials-image__text" data-swiper-parallax-x="-100" data-swiper-parallax-opacity="0">
-                              <p class="t-large">Working with Alex was an absolute pleasure! He took the time to understand our business 
+                              <p class="t-large">Working with Gray was an absolute pleasure! He took the time to understand our business 
                                 needs and translated them into a beautifully designed, user-friendly website.</p>
                               <a class="btn btn-anim btn-default btn-small btn-opposite slide-right-up" href="#0">
                                 <span class="btn-caption">Project Page</span>
@@ -628,7 +628,7 @@
                               </div>
                             </div>
                             <div class="mxd-testimonials-image__text" data-swiper-parallax-x="-100" data-swiper-parallax-opacity="0">
-                              <p class="t-large">Amazing job on our website! Alex understood exactly 
+                              <p class="t-large">Amazing job on our website! Gray understood exactly 
                                 what we needed and made it look great and easy to use.</p>
                               <a class="btn btn-anim btn-default btn-small btn-opposite slide-right-up" href="#0">
                                 <span class="btn-caption">Project Page</span>
