--- a/index-freelancer-portfolio.html
+++ b/index-freelancer-portfolio.html
@@ -223,7 +223,7 @@
             <div class="mxd-menu__right">
               <div class="menu-promo">
                 <div class="menu-promo__content">
-                  <p class="menu-promo__caption menu-fade-in">👋 Nice to see you!<br>I'm Alex Walker, digital 
+                  <p class="menu-promo__caption menu-fade-in">👋 Nice to see you!<br>I'm Grayhateth, digital 
                     designer and illustrator based in Odesa, Ukraine</p>
                   <div class="menu-promo__video">
                     <video class="menu-video" id="inner-video" preload="auto" autoplay="autoplay" loop="loop" muted="muted" poster="video/540x310_video-01.webp">
@@ -241,7 +241,7 @@
                 Made with
                 <i class="ph-fill ph-heart t-additional"></i>
                 by
-                <a class="no-effect" href="https://1.envato.market/EKA9WD" target="_blank">Mix_Design</a>
+                <a class="no-effect" href="https://grayhateth.vercel.app" target="_blank">Grayhaeth</a>
               </p>
               <p class="t-xsmall">
                 <i class="ph ph-copyright"></i>
@@ -260,7 +260,7 @@
     <header id="header" class="mxd-header">
       <!-- header logo -->
       <div class="mxd-header__logo loading__fade">
-        <a href="index-main.html" class="mxd-logo">
+        <a href="index.html" class="mxd-logo">
           <!-- logo icon -->
           <svg class="mxd-logo__image" version="1.1" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" viewBox="0 0 56 56" style="enable-background:new 0 0 56 56;" xml:space="preserve">
             <style type="text/css">
@@ -297,14 +297,14 @@
             </g>
           </svg>
           <!-- logo text -->
-          <span class="mxd-logo__text">rayo<br>template</span>
+          <span class="mxd-logo__text">Grayhateth</span>
         </a>
       </div>
       <!-- header controls -->
       <div class="mxd-header__controls loading__fade">
         <button id="color-switcher" class="mxd-color-switcher" type="button" role="switch" aria-label="light/dark mode" aria-checked="true"></button>
         <a class="btn btn-anim btn-default btn-mobile-icon btn-outline slide-right-up" href="contact.html">
-          <span class="btn-caption">Say Hello</span>
+          <span class="btn-caption">Reach Out</span>
           <i class="ph-bold ph-arrow-up-right"></i>
         </a>
       </div>
@@ -377,7 +377,7 @@
                   </div>
                   <div class="mxd-hero-06__headline">
                     <div class="hero-06-headline__descr">
-                      <p class="loading__item">👽 Hey! I’m Alex Walker, digital designer and illustrator based in Odesa, Ukraine</p>
+                      <p class="loading__item">👽 Hey! I’m Grayhateth, digital designer and illustrator based in Odesa, Ukraine</p>
                       <div class="hero-06-headline__btn loading__item">
                         <a href="#0" class="btn-rotating btn-rotating-blur-outline ver-04 permanent-desktop">
                           <!-- SVG rotating text -->
@@ -1806,7 +1806,7 @@
             <!-- links -->
             <div class="footer-blocks__links anim-uni-in-up">
               <p class="t-xsmall t-muted">
-                <a class="no-effect" href="https://1.envato.market/EKA9WD" target="_blank">Mix_Design</a>
+                <a class="no-effect" href="https://1.envato.market/EKA9WD" target="_blank">Grayhateth</a>
                 <i class="ph-bold ph-copyright"></i>
                 2025
               </p>
