--- a/services.html
+++ b/services.html
@@ -223,8 +223,8 @@
             <div class="mxd-menu__right">
               <div class="menu-promo">
                 <div class="menu-promo__content">
-                  <p class="menu-promo__caption menu-fade-in">👋 Nice to see you!<br>I'm Alex Walker, digital 
-                    designer and illustrator based in Odesa, Ukraine</p>
+                  <p class="menu-promo__caption menu-fade-in">👋 Nice to see you!<br>I'm Gray, digital 
+                    designer and illustrator </p>
                   <div class="menu-promo__video">
                     <video class="menu-video" id="inner-video" preload="auto" autoplay="autoplay" loop="loop" muted="muted" poster="video/540x310_video-01.webp">
                       <source type="video/mp4" src="video/540x310_video-01.mp4">
@@ -241,7 +241,7 @@
                 Made with
                 <i class="ph-fill ph-heart t-additional"></i>
                 by
-                <a class="no-effect" href="https://1.envato.market/EKA9WD" target="_blank">grayhateth</a>
+                <a class="no-effect" href="https://grayhateth.vercel.app" target="_blank">grayhateth</a>
               </p>
               <p class="t-xsmall">
                 <i class="ph ph-copyright"></i>
@@ -304,7 +304,7 @@
       <div class="mxd-header__controls loading__fade">
         <button id="color-switcher" class="mxd-color-switcher" type="button" role="switch" aria-label="light/dark mode" aria-checked="true"></button>
         <a class="btn btn-anim btn-default btn-mobile-icon btn-outline slide-right-up" href="contact.html">
-          <span class="btn-caption">Say Hello</span>
+          <span class="btn-caption">Reach Out</span>
           <i class="ph-bold ph-arrow-up-right"></i>
         </a>
       </div>
