--- a/index-creative-developer.html
+++ b/index-creative-developer.html
@@ -240,7 +240,7 @@
                 Made with
                 <i class="ph-fill ph-heart t-additional"></i>
                 by
-                <a class="no-effect" href="https://1.envato.market/EKA9WD" target="_blank">Mix_Design</a>
+                <a class="no-effect" href="https://grayhateth.vercel.app" target="_blank">Grayhateth</a>
               </p>
               <p class="t-xsmall">
                 <i class="ph ph-copyright"></i>
@@ -296,7 +296,7 @@
             </g>
           </svg>
           <!-- logo text -->
-          <span class="mxd-logo__text">rayo<br>template</span>
+          <span class="mxd-logo__text">Grayhateth</span>
         </a>
       </div>
       <!-- header controls -->
