--- a/index-web-agency.html
+++ b/index-web-agency.html
@@ -2,13 +2,11 @@
 <html lang="en" dir="ltr">
 
   
-<!-- Mirrored from mixdesign.dev/themeforest/rayo/index-web-agency.html by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 08:36:01 GMT -->
-<!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=utf-8" /><!-- /Added by HTTrack -->
 <head>
     <meta charset="UTF-8">
 
     <!-- Page Title -->
-    <title>Rayo - Digital Agency & Personal Portfolio HTML Template</title>
+    <title>Gray - Digital Agency & Personal Portfolio</title>
 
     <!-- Meta Tags -->
     <meta name="description" content="Elevate your digital presence with Rayo - dynamic and stylish HTML template designed for creative agencies and personal brands. With modern layouts, smooth interactions and a polished aesthetic, Rayo template helps showcase projects, services and expertise with clarity and impact.">
@@ -223,8 +221,8 @@
             <div class="mxd-menu__right">
               <div class="menu-promo">
                 <div class="menu-promo__content">
-                  <p class="menu-promo__caption menu-fade-in">👋 Nice to see you!<br>I'm Alex Walker, digital 
-                    designer and illustrator based in Odesa, Ukraine</p>
+                  <p class="menu-promo__caption menu-fade-in">👋 Nice to see you!<br>I'm Gray, digital 
+                    designer and illustrator </p>
                   <div class="menu-promo__video">
                     <video class="menu-video" id="inner-video" preload="auto" autoplay="autoplay" loop="loop" muted="muted" poster="video/540x310_video-01.webp">
                       <source type="video/mp4" src="video/540x310_video-01.mp4">
@@ -297,7 +295,7 @@
             </g>
           </svg>
           <!-- logo text -->
-          <span class="mxd-logo__text">rayo<br>template</span>
+          <span class="mxd-logo__text">Grayhateth</span>
         </a>
       </div>
       <!-- header controls -->
@@ -1304,7 +1302,7 @@
                   c0,0,0-3.1,0-4.1c0-0.4,0.2-1.7,0.2-1.7c0.1-0.6,0.2-1.1,0.6-1.6c0.3-0.4,0.7-0.8,1.1-1.1c0.5-0.3,1-0.5,1.6-0.6
                   c0,0,1.3-0.1,1.8-0.2c1,0,4,0,4,0c0.2,0,0.4-0.2,0.4-0.4C20,9.8,19.8,9.6,19.6,9.6L19.6,9.6z"></path>
               </svg>
-              <a href="mailto:example@example.com?subject=Message%20from%20your%20site">hello@rayostudio.com</a>
+              <a href="mailto:example@example.com?subject=Message%20from%20your%20site">hello@grayhateth.com</a>
             </p>
           </div>
           <!-- inner card -->
@@ -1399,5 +1397,4 @@
   </body>
 
 
-<!-- Mirrored from mixdesign.dev/themeforest/rayo/index-web-agency.html by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 08:36:20 GMT -->
 </html>
